# fedas_codes

./: .gitignore  LICENSE  README.md  predict.ipynb  pyproject.toml  train.ipynb  train_val.ipynb
example_data/: example_test_technical_test.csv  example_train_technical_test.csv
src/: cli.py
src/conf/: conf.py  conf.yaml
src/etl/: etl.py
src/etl/extract/: text_data.py  text_decoder_data.py  text_encoder_data.py
src/etl/load/: dataloader.py  default_dl.yaml
src/etl/transform/: tokenizer.py
src/model/: model.py  model.yaml
src/model/utils/: utils.py
src/task/: __init__.py  task.py
src/trainer/: default_trainer.yaml  metrics.py  scheduler.py  summary.py  trainer.py
tests/: test_task.py
tests/etl/extract/: test_text_decoder_data.py  test_text_encoder_data.py
tests/etl/transform/: test_tokenizer.py
tests/task/: test_get_task.py  test_task.py  test_training_task.py
